--- a/resources.qrc
+++ b/resources.qrc
@@ -9,5 +9,7 @@
         <file>help/man</file>
         <file>help/quit</file>
         <file>help/uname</file>
+        <file>help/history</file>
+        <file>help/help</file>
     </qresource>
 </RCC>
